force-app/main/default/objects/FedEx_Account__mdt/FedEx_Account__mdt.object-meta.xml
<CustomObject>
    <description>All Important Information about FedEx Account.</description>
    <label>FedEx Account</label>
    <pluralLabel>FedEx Account</pluralLabel>
</CustomObject>