force-app/main/default/objects/FedEx_Account__mdt/fields/Client_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Number__c</fullName>
    <description>Client Account Number</description>
    <label>Client Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>