force-app/main/default/objects/FedEx_Account__mdt/fields/Client_Integrator_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Integrator_Id__c</fullName>
    <label>Client Integrator Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>