force-app/main/default/objects/FedEx_Account__mdt/fields/Client_Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Meter_Number__c</fullName>
    <label>Client Meter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>