force-app/main/default/objects/FedEx_Account__mdt/fields/FedEx_Key__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Key__c</fullName>
    <label>FedEx Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>