force-app/main/default/objects/FedEx_Account__mdt/fields/FedEx_Password__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Password__c</fullName>
    <label>FedEx Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>